--- a/style3.css
+++ b/style3.css
@@ -153,6 +153,8 @@
         {
             display: none;
         }
+        
+        
 
         
 
@@ -199,16 +201,21 @@
             display: flex;
             flex-direction: column;
             flex-wrap: wrap;
+            
         }
         .second-one
         {
             flex: 1;
             background-color: whitesmoke;
             display: flex;
+            
         }
-        .second-two
+        .second-second
         {
             
+            
+            flex: 1;
+            background-color: whitesmoke;
             display: flex;
         }
 
@@ -253,7 +260,7 @@
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
           }
 
-
+          
     @media only screen and (max-width:830px)
     {
         .left
@@ -342,6 +349,11 @@
         .nav-div-nav
         {
             flex: 1;
+            display: none;
+        }
+        .nav-div-nav.active
+        {
+                display: block;
         }
         .drop-down
         {
@@ -533,6 +545,11 @@
         .nav-div-nav
         {
             flex: 1;
+            display: none;
+        }
+        .nav-div-nav.active
+        {
+                display: block;
         }
         .drop-down
         {
